v1.0初步实现
